# TCC

./: .gitignore  Helper.cpp  Helper.hpp  MANUAL.md  Makefile  README.md  Rule.cpp  Rule.hpp  Tree.cpp  Tree.hpp  lexer.l  parser.y  saida.cpp  types.hpp
src/: CodeGen.cpp  CodeGen.hpp  Helper.cpp  Helper.hpp  RegAlloc.cpp  RegAlloc.hpp  Rule.cpp  Rule.hpp  Tree.cpp  Tree.hpp  Tree.tpp  lexer.l  parser.y  teste.cpp  types.hpp
tests/: test.sh
tests/grammars/: grammar_01.md  grammar_01.txt  grammar_02.md  grammar_02.txt  test_grammar_01
user/: CMakeLists.txt  README.md
user/entradas/: entrada_01.c  fatorial.c  fibonacci.c  inverte_vetor.c  multiplica_vetor.c
user/output/: fatorial.asm  fibonacci.asm  grammar.cpp  grammar.hpp  mips.cpp  mips.hpp  multiplica_vetor.asm
user/src/: AstSymbols.cpp  AstSymbols.h  Tree.cpp  Tree.h  grammar.md  main.cpp  mips.md
user/src/lib/msa/: ast_symbols.h  commands.h  hashTable.h  semantico.tab.h  types.h
user/src/lib/yamg/: RegAlloc.hpp
user/src/lib_msa/: errors.h
